--- a/examples/templates/topics/base.html
+++ b/examples/templates/topics/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>{% block title %}Default{% endblock %}</title></head>
+<head><title>{% block title %}Default{% endblock %} (stream)</title></head>
 <body>
 {% block content %}{% endblock %}
 </body>
